Added key prop for good element

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@cypress/webpack-dev-server": "^1.8.4",
