--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mate-academy/cypress-tools": "^1.0.5",
     "@mate-academy/eslint-config-react": "^0.0.11",
     "@mate-academy/eslint-config-react-typescript": "^1.0.1",
-    "@mate-academy/scripts": "^1.2.8",
+    "@mate-academy/scripts": "^1.2.10",
     "@mate-academy/students-ts-config": "*",
     "@mate-academy/stylelint-config": "*",
     "@types/node": "^17.0.23",
@@ -28,7 +28,9 @@
     "@types/react-dom": "^17.0.14",
     "cypress": "^9.5.3",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-prettier": "^5.0.1",
     "gh-pages": "^3.2.3",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.0",
