--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@cypress/react": "^5.12.4",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "bulma": "^0.9.4",
-    "classnames": "^2.3.2",
+    "classnames": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@cypress/webpack-dev-server": "^1.8.4",
@@ -32,7 +33,6 @@
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^6.2.0",
-    "node-sass": "^6.0.1",
     "postcss": "^8.4.12",
     "stylelint": "^15.11.0",
     "typescript": "^4.6.3"
