--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@mate-academy/eslint-config-react": "latest",
-    "@mate-academy/scripts": "^1.7.9",
+    "@mate-academy/eslint-config-react": "0.0.17",
+    "@mate-academy/scripts": "^1.2.8",
     "@mate-academy/stylelint-config": "latest",
     "cypress": "^12.17.4",
     "eslint": "^7.32.0",
@@ -26,6 +26,7 @@
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^6.2.0",
+    "parcel": "^1.12.3",
     "postcss": "^8.4.12",
     "prettier": "^3.2.5",
     "sass": "^1.72.0",
