--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@cypress/react18": "^2.0.0",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "bulma": "^0.9.4",
+    "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
